--- a/requirements.txt
+++ b/requirements.txt
@@ -44,17 +44,17 @@ six==1.16.0
 smmap==5.0.0
 sortedcontainers==2.4.0
 threadpoolctl==3.1.0
-torch==1.12.1+cu113
-torch-cluster==1.6.0
-torch-geometric==2.1.0.post1
-torch-scatter==2.0.9
-torch-sparse==0.6.15
-torch-spline-conv==1.2.1
-torchaudio==0.12.1+cu113
-torchmetrics==0.10.2
-torchvision==0.13.1+cu113
+torch
+torch-cluster
+torch-geometric
+torch-scatter
+torch-sparse
+torch-spline-conv
+torchaudio
+torchmetrics
+torchvision
 torchviz==0.0.2
 tqdm==4.64.1
-typing_extensions==4.4.0
+typing_extensions
 urllib3==1.26.12
 wandb==0.14.0
